add first unit test for login
