# src/docs/swagger.yaml
@@ -44,15 +44,15 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
-              $ref: "#/components/schemas/LoginRequestDTO"
+              $ref: "#/components/schemas/SignupRequestDTO"
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LoginResponseDTO"
+                $ref: "#/components/schemas/SignupResponseDTO"
         "400":
           description: Bad request
 components:
@@ -65,6 +65,7 @@ components:
           example: "John Doe"
         password:
           type: string
+          format: password
           example: "12345678"
       required:
         - username
@@ -90,3 +91,29 @@ components:
         profile:
           type: string
           example: "http://localhost:8000/public/profiles/images"
+    SignupRequestDTO:
+     type: object
+     properties:
+      username:
+       type: string
+       example: "John Doe"
+      password:
+        type: string
+        format: password
+        example: "12345678"
+      profile:
+        type: string
+        format: binary
+    SignupResponseDTO:
+     type: object
+     properties:
+      username:
+       type: string
+       example: "John Doe"
+      role:
+        type: string
+        example: "admin"
+      profile:
+        type: string
+        format: binary
+
